--- a/projet.ipynb
+++ b/projet.ipynb
@@ -737,26 +737,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linspace(0, 1, 11)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 101,
    "metadata": {},
    "outputs": [
@@ -790,6 +770,36 @@
     "plt.savefig(\"img/nuage_points.png\", format=\"png\")\n",
     "\n",
     "# Afficher le nuage de points\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Définition des fonctions et des colonnes\n",
+    "functions = ['longueur_chaine', 'nombre_mots', 'nombre_caracteres_speciaux', 'nombre_lettres', 'nombre_voyelles', 'nombre_consonnes']\n",
+    "columns = list(stats_dict.keys())\n",
+    "\n",
+    "# Création du barplot\n",
+    "fig, axes = plt.subplots(len(functions), len(columns), figsize=(15, 10))\n",
+    "\n",
+    "for i, function in enumerate(functions):\n",
+    "    for j, column in enumerate(columns):\n",
+    "        # Sélection des données correspondantes\n",
+    "        data = stats_dict[column][function]\n",
+    "        # Création du barplot pour cette combinaison fonction-colonne\n",
+    "        axes[i, j].bar(range(len(data)), data)\n",
+    "        axes[i, j].set_title(f'{function} - {column}')\n",
+    "        axes[i, j].set_xlabel('Index')\n",
+    "        axes[i, j].set_ylabel('Valeur')\n",
+    "\n",
+    "# Ajustement des espacements entre les subplots\n",
+    "plt.tight_layout()\n",
     "plt.show()\n"
    ]
   },
