--- a/scripts/stats_desc.ipynb
+++ b/scripts/stats_desc.ipynb
@@ -16,12 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "import re\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -31,7 +31,7 @@
     "from PIL import Image\n",
     "import string\n",
     "\n",
-    "from functions import load_labels"
+    "from functions import *"
    ]
   },
   {
@@ -43,19 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'yaml' is not defined",
+     "evalue": "name 're' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/ds/6_q_535d6glb02j5ym2j6ly00000gn/T/ipykernel_10041/869475798.py\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mtokens\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_tags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnoms_tags\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../data/tokens.yml\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/ENSAE/3A/S2/NLP/Projet_NLP_3A/scripts/functions.py\u001b[0m in \u001b[0;36mload_labels\u001b[0;34m(file_path)\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mnoms_tags\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mNames\u001b[0m \u001b[0mof\u001b[0m \u001b[0mtags\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \"\"\"\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0mtokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myaml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msafe_load\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'yaml' is not defined"
+      "\u001b[1;32m/home/onyxia/Projet_NLP_3A/scripts/stats_desc.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell://user-cdechaux-436056-0.user.lab.sspcloud.fr/home/onyxia/Projet_NLP_3A/scripts/stats_desc.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m tokens, list_tags, noms_tags \u001b[39m=\u001b[39m load_labels(\u001b[39m\"\u001b[39m\u001b[39m../data/tokens.yml\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://user-cdechaux-436056-0.user.lab.sspcloud.fr/home/onyxia/Projet_NLP_3A/scripts/stats_desc.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Appliquer les fonctions clean_text et normalize_text à chaque élément de data\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://user-cdechaux-436056-0.user.lab.sspcloud.fr/home/onyxia/Projet_NLP_3A/scripts/stats_desc.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m data \u001b[39m=\u001b[39m {key: clean_text(value) \u001b[39mfor\u001b[39;49;00m key, value \u001b[39min\u001b[39;49;00m data\u001b[39m.\u001b[39;49mitems()}\n\u001b[1;32m     <a href='vscode-notebook-cell://user-cdechaux-436056-0.user.lab.sspcloud.fr/home/onyxia/Projet_NLP_3A/scripts/stats_desc.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mNombre d\u001b[39m\u001b[39m'\u001b[39m\u001b[39mentrées dans le fichier entities.json:\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mlen\u001b[39m(data))\n\u001b[1;32m     <a href='vscode-notebook-cell://user-cdechaux-436056-0.user.lab.sspcloud.fr/home/onyxia/Projet_NLP_3A/scripts/stats_desc.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mNombre de tags :\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mlen\u001b[39m(tokens))\n",
+      "\u001b[1;32m/home/onyxia/Projet_NLP_3A/scripts/stats_desc.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell://user-cdechaux-436056-0.user.lab.sspcloud.fr/home/onyxia/Projet_NLP_3A/scripts/stats_desc.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m tokens, list_tags, noms_tags \u001b[39m=\u001b[39m load_labels(\u001b[39m\"\u001b[39m\u001b[39m../data/tokens.yml\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://user-cdechaux-436056-0.user.lab.sspcloud.fr/home/onyxia/Projet_NLP_3A/scripts/stats_desc.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Appliquer les fonctions clean_text et normalize_text à chaque élément de data\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://user-cdechaux-436056-0.user.lab.sspcloud.fr/home/onyxia/Projet_NLP_3A/scripts/stats_desc.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m data \u001b[39m=\u001b[39m {key: clean_text(value) \u001b[39mfor\u001b[39;00m key, value \u001b[39min\u001b[39;00m data\u001b[39m.\u001b[39mitems()}\n\u001b[1;32m     <a href='vscode-notebook-cell://user-cdechaux-436056-0.user.lab.sspcloud.fr/home/onyxia/Projet_NLP_3A/scripts/stats_desc.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mNombre d\u001b[39m\u001b[39m'\u001b[39m\u001b[39mentrées dans le fichier entities.json:\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mlen\u001b[39m(data))\n\u001b[1;32m     <a href='vscode-notebook-cell://user-cdechaux-436056-0.user.lab.sspcloud.fr/home/onyxia/Projet_NLP_3A/scripts/stats_desc.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mNombre de tags :\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mlen\u001b[39m(tokens))\n",
+      "File \u001b[0;32m~/Projet_NLP_3A/scripts/functions.py:43\u001b[0m, in \u001b[0;36mclean_text\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mclean_text\u001b[39m(text):\n\u001b[1;32m     35\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\" removing special characters and tags except those in list_tags, and normalizing\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \n\u001b[1;32m     37\u001b[0m \u001b[39m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[39m        str: clean and normalize \u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m     clean_text \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39msub(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m[^\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\\\u001b[39m\u001b[39ms\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m re\u001b[39m.\u001b[39mescape(\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(list_tags)) \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m]\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m, text)\n\u001b[1;32m     44\u001b[0m     normalized_text \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(c \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m unicodedata\u001b[39m.\u001b[39mnormalize(\u001b[39m'\u001b[39m\u001b[39mNFD\u001b[39m\u001b[39m'\u001b[39m, clean_text) \u001b[39mif\u001b[39;00m unicodedata\u001b[39m.\u001b[39mcategory(c) \u001b[39m!=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mMn\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     45\u001b[0m     \u001b[39mreturn\u001b[39;00m normalized_text\n",
+      "\u001b[0;31mNameError\u001b[0m: name 're' is not defined"
      ]
     }
    ],
@@ -988,7 +989,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
