--- a/scripts/stats_desc.ipynb
+++ b/scripts/stats_desc.ipynb
@@ -8,28 +8,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Import des Librairies"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "from wordcloud import WordCloud, ImageColorGenerator\n",
-    "from collections import Counter\n",
-    "from PIL import Image\n",
-    "import string\n",
-    "\n",
     "from functions import *"
    ]
   },
@@ -84,7 +67,7 @@
     "pattern = \"|\".join([\"\\s(?={})\".format(re.escape(tag)) for tag in list_tags])\n",
     "\n",
     "# création d'un dictionnaire pour stocker les mots correspondants à chaque tag\n",
-    "data_dict= fill_tag_dictionary(data_lines, list_tags, pattern)\n",
+    "data_dict = fill_tag_dictionary(data_lines, list_tags, pattern)\n",
     "\n",
     "# Créer un DataFrame à partir du dictionnaire\n",
     "df = pd.DataFrame(data_dict)\n",
@@ -274,10 +257,12 @@
    ],
    "source": [
     "result2 = df.apply(check_both_not_empty, axis=1)\n",
-    "print(np.sum(result2) ,\" lignes du dataframe ont 'surname' et 'surname_household' remplis\")\n",
+    "print(\n",
+    "    np.sum(result2), \" lignes du dataframe ont 'surname' et 'surname_household' remplis\"\n",
+    ")\n",
     "\n",
     "\n",
-    "# On fusionne les deux colonnes \n",
+    "# On fusionne les deux colonnes\n",
     "df[\"surname\"] = df.apply(\n",
     "    lambda row: fusionner_colonnes(row[\"surname\"], row[\"surname_household\"]), axis=1\n",
     ")\n",
@@ -557,7 +542,7 @@
     "stats_dict = {}\n",
     "stats_dict_mean = {}\n",
     "\n",
-    "# On applique chaque fonction à chaque label pour calculer les statistiques descriptives \n",
+    "# On applique chaque fonction à chaque label pour calculer les statistiques descriptives\n",
     "for col in df.columns:\n",
     "    print(col)\n",
     "    # Création d'un DataFrame pour la colonne actuelle\n",
@@ -673,7 +658,7 @@
     "        s=5,\n",
     "    )\n",
     "\n",
-    "plt.xlim(0, 70) \n",
+    "plt.xlim(0, 70)\n",
     "plt.ylim(0, 30)\n",
     "plt.xlabel(\"Longueur de la chaîne\")\n",
     "plt.ylabel(\"Nombre de lettres\")\n",
@@ -711,7 +696,7 @@
     "# Ajuster la transparence du masque\n",
     "mask[mask == 128] = 0\n",
     "\n",
-    "# Creation du nuage de mots \n",
+    "# Creation du nuage de mots\n",
     "wordcloud_fra = WordCloud(\n",
     "    stopwords=STOPWORDS,\n",
     "    background_color=\"rgba(255, 255, 255, 0)\",\n",
@@ -781,6 +766,22 @@
     "    plt.title(cat)\n",
     "    plt.axis(\"off\")\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On enregistre le DataFrame pour pouvoir le réutiliser dans nos modèles "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../data/dataset.csv\", index=False)"
    ]
   }
  ],
