--- a/scripts/stats_desc.ipynb
+++ b/scripts/stats_desc.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chargement et nettoyage des données"
+    "## Chargement et nettoyage des données"
    ]
   },
   {
@@ -412,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Statistiques sur le type de chaîne de caractères pour chaque label"
+    "## Statistiques sur le type de chaîne de caractères pour chaque label"
    ]
   },
   {
@@ -680,6 +680,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nuages de mots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -777,6 +784,13 @@
     "    plt.axis(\"off\")\n",
     "    plt.savefig(\"../img/nuage_mots_\"+ cat +\".png\", format=\"png\")\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Enregistrer la base de données "
    ]
   },
   {
